# pegra-capital-backend

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
src/: main.cpp
src/controllers/: auth_controller.cpp  auth_controller.h
src/db/: connect.cpp  connect.h
src/routes/: auth_routes.cpp  auth_routes.h  scrapeRoute.cpp  user.cpp  user.h
src/utils/: bcrypt_manager.cpp  bcrypt_manager.h  env_manager.cpp  env_manager.h  jwt_manager.cpp  jwt_manager.h
